# ghostty

src/apprt/: runtime.zig
src/config/: Config.zig  file_load.zig
src/font/: DeferredFace.zig  backend.zig  discovery.zig
src/os/: main.zig  wsl.zig
src/renderer/: backend.zig
src/shell-integration/powershell/: ghostty.ps1
src/termio/: shell_integration.zig
windows/: CMakeLists.txt
windows/installer/: ghostty.wxs
windows/src/: App.cpp  App.h  Input.cpp  Input.h  Surface.cpp  Surface.h  WGLContext.cpp  WGLContext.h  Window.cpp  Window.h  main.cpp
